  as argument, so you can use this, typed as `org.spockframework.runtime.extension.builtin.PreconditionContext` to
  enable IDE support like code completion:
+
[source,groovy]
----
@IgnoreIf({ PreconditionContext it -> it.os.windows })
def "I'll run everywhere but on Windows"() { ... }
----

- Upgrade Groovy to 2.5.11 (improved Java 14+ support) and 3.0.3 (fixes #1127)

- Upgrade JUnit 4 to 4.13 (in `spock-junit4`)

- Upgrade Hamcrest to 2.2 (from 1.3 provided previously by `junit4.jar`)

- Derived data variables (assignments in `where` blocks) now also support multi-assignment syntax, including ignoring
  some values with the wildcard expression.
+
[source,groovy]
----
(a, b, _, c) = row
----

- Multi-variable data pipes now also support nesting.
+
[source,groovy]
----
[a, [_, b]] << [
  [1, [5, 1]],
  [2, [5, 2]]
]
----

- The condition closures for `@IgnoreIf`, `@Requires` and `@PendingFeatureIf` can now access data variables
  if applied to a data driven feature. This has further implications that are documented in the respective
  documentation parts and JavaDocs.

- Data driven features are now unrolled by default. `@Unroll` can still be used to specify a custom naming pattern.
  A simple `@Unroll` without argument is not needed anymore except when undoing a spec-level `@Rollup` annotation
  or if unrolling by default is disabled, so any simple `@Unroll` annotations can be removed from existing code. You
  can verify this by looking at the test count which should not have been changed after you removed the simple
  `@Unroll` annotations.

- `@Rollup` can now be used on feature and spec level to explicitly roll up any feature where the reporting of single
  iterations is not wanted.

- The setting `unroll { unrollByDefault false }` in the Spock configuration file can be set to roll up all
  features by default if not overwritten by explicit `@Unroll` annotations and thus reinstate the pre
  Spock 2.0 behaviour.

== 2.0-M2 (2020-02-10)

=== Groovy-3.0 Support
